...

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_fives"
                android:text="Fives"></Button>

            <TextView
                android:id="@+id/player_one_fives"
                android:layout_column="1"
                android:gravity="center"
                android:text="0"
...

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_fullHouse"
                android:text="Full House"></Button>

            <TextView
                android:id="@+id/player_one_full_house"
                android:layout_column="1"
                android:gravity="center"
                android:text="0"
...

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_largeStraight"
                android:text="Large S"></Button>

            <TextView
                android:id="@+id/player_one_large_straight"
                android:layout_column="1"
                android:gravity="center"
                android:text="0"
...
